// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SafelySetInnerHTML XSS attack prevention should prevent basic XSS attacks 1`] = `
<div>
  
      
  <style>
    
        [ontransitionend] {
          transition: all 0.2s;
        }
        [ontransitionend]:hover {
          color: black;
        }
      
  </style>
  
      
  <div>
    XSS Attack
  </div>
  
    
</div>
`;

exports[`SafelySetInnerHTML attributes rules should work with React special properties 1`] = `
Array [
  "
      ",
  <article
    class="article"
  >
    
        
    <h2
      class="article__title"
    >
      Article title
    </h2>
          
        
    <p
      class="article__content"
    >
      Lorem ipsum dolor sit amet
    </p>
          
      
  </article>,
  "
    ",
]
`;

exports[`SafelySetInnerHTML rendering process renders correctly 1`] = `
<p>
  Hello 
  <strong>
    World !
  </strong>
</p>
`;

exports[`SafelySetInnerHTML rendering process renders correctly 2`] = `
<cite>
  About the 
  <a
    href="http://example.com"
  >
    Author !
  </a>
</cite>
`;

exports[`SafelySetInnerHTML rendering process renders only allowedTags 1`] = `
<p>
  Hello 
  World !
</p>
`;
